--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Kulki</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/build/style.css">
+    <link rel="stylesheet" type="text/css" href="build/style.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/build/bundle.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
