improve style; improve content of info pages

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -5,10 +5,16 @@
     <link rel="stylesheet" type="text/css" href="/build/style.css">
   </head>
   <body>
-    The application is built with these JavaScript libraries:
-    <ul>
-      <li><strong>React</strong> - a library for building user interfaces</li>
-      <li><strong>Redux</strong> - a state management library</li>
-    </ul>
+    <div class="info-page-wrapper">
+      The application is built with these JavaScript libraries and tools:
+      <ul>
+        <li><strong><a href="https://reactjs.org/">React</a></strong> - a library for building user interfaces</li>
+        <li><strong><a href="https://redux.js.org/">Redux</a></strong> - a state management library</li>
+        <li><strong><a href="https://github.com/reduxjs/reselect">Reselect</a></strong> - a library for caching values of functions of Redux state</li>
+        <li><strong><a href="https://babeljs.io/">Babel</a></strong> - a JS transpiler: converts newer and nonstandard features of JavaScript to format compatible with older browsers, additionally converts React markup</li>
+        <li><strong><a href="https://webpack.js.org/">Webpack</a></strong> - a JS bundler: converts multiple JavaScript files into a single script file, may additionally package other assets</li>
+      </ul>
+      The app is simple enough to not require CSS tools like Sass. All styles are in a single CSS file.
+    </div>
   </body>
 </html>
